Update package metadata and brainstorm some specs.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "hubot-example",
-  "description": "An example script pacakage for Hubot",
+  "name": "hubot-markov",
+  "description": "Build a markov model of everything Hubot hears.",
   "version": "1.0.0",
-  "author": "Tom Bell <tomb@tomb.io>",
+  "author": "Ash Wilson <smashwilson@gmail.com>",
   "license": "MIT",
 
   "keywords": [
     "hubot",
-    "hubot-scripts"
+    "hubot-scripts",
+    "markov"
   ],
 
   "repository": {
     "type": "git",
-    "url": "git://github.com/hubot-scripts/hubot-example.git"
+    "url": "git://github.com/smashwilson/hubot-markov.git"
   },
 
   "bugs": {
-    "url": "https://github.com/hubot-scripts/hubot-example/issues"
+    "url": "https://github.com/smashwilson/hubot-markov/issues"
   },
 
   "dependencies": {
