Add tberman to the contributors. :cake:

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     {
       "name": "Kyle Kelley",
       "email": "rgbkrk@gmail.com"
+    },
+    {
+      "name": "Todd Berman",
+      "email": "tberman@off.net"
     }
   ],
 
