Add @atiaxi to the package contributors :sparkles:

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     {
       "name": "Todd Berman",
       "email": "tberman@off.net"
+    },
+    {
+      "name": "Roger Ostrander",
+      "email": "atiaxi@gmail.com"
     }
   ],
 
