--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "url": "https://github.com/smashwilson/hubot-markov/issues"
   },
   "dependencies": {
+    "async": "2.1.4",
     "coffee-script": "~1.6",
     "pg": "^6.1.0",
     "redis": "~0.9.1"
   },
   "devDependencies": {
-    "mocha": "*",
-    "chai": "*",
-    "sinon-chai": "*",
-    "sinon": "*"
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "sinon": "*",
+    "sinon-chai": "*"
   },
   "main": "index.coffee",
   "scripts": {
