--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "hubot-test-helper": "^1.5.0",
     "mocha": "^3.2.0",
     "sinon": "*",
     "sinon-chai": "*"
