--- a/package.json
+++ b/package.json
@@ -43,12 +43,10 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "hubot-test-helper": "^1.5.0",
-    "mocha": "^3.2.0",
-    "sinon": "*",
-    "sinon-chai": "*"
+    "mocha": "^3.2.0"
   },
   "main": "index.coffee",
   "scripts": {
-    "test": "script/test"
+    "test": "mocha --compilers coffee:coffee-script --colors"
   }
 }
