--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ services:
 - postgresql
 env:
   global:
-    REDIS_URL: redis://localhost:6379/0
-    DATABASE_URL: postgres://postgres@localhost/travis
-    secure: YD5FL5NlhoG0TCy1xfkFBPUpQ+5Am90FhS1Tv8GENL+RP7sY+MFM4WmS4QRQvPAWj5gqaiiLcoAQ0RTRliQjMMGcI0huBYhHJ4EESKqjvcpfXCxOG103+uX6q6ES+kh1bok0j6DfLJSZKoNX8bOV73iG6JsJM3/2c60O0LgO2mY=
+  - REDIS_URL: redis://localhost:6379/0
+  - DATABASE_URL: postgres://postgres@localhost/travis
+  - secure: YD5FL5NlhoG0TCy1xfkFBPUpQ+5Am90FhS1Tv8GENL+RP7sY+MFM4WmS4QRQvPAWj5gqaiiLcoAQ0RTRliQjMMGcI0huBYhHJ4EESKqjvcpfXCxOG103+uX6q6ES+kh1bok0j6DfLJSZKoNX8bOV73iG6JsJM3/2c60O0LgO2mY=
 before_install:
 - npm install -g npm@latest greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
