--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -29,7 +29,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         ports:
-        - 6379:6379
+        - "6379:6379"
       postgres:
         image: postgres
         env:
@@ -41,6 +41,8 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+        - "5432:5432"
 
     steps:
     - name: checkout
